# chain_notary

./: .env  .env-example  .gitattributes  .gitignore  AGENTS.md  BUILD.md  Cargo.tomlZone.Identifier  README.md  canister_ids.json  deploy.sh  dfx.json  nft_viewer.html
.cursor/rules/: wsl-commands.mdc
.github/workflows/: ci.yml  deploy.yml  test-identity.yml
backend/: CATEGORY_METADATA_EXAMPLE.md  COLLECTION_MANAGEMENT.md  Cargo.toml  INSTITUTION_MANAGEMENT.md  QUERY_REORGANIZATION.md  README.md  TESTING.md  backend.did  lib.rs  test_collections.sh  test_documents.sh  test_institutions.sh  test_script.sh
backend/src/: lib.rs  lifecycle.rs
backend/src/functions/: admin_queries.rs  analytics.rs  collection.rs  collection_queries.rs  document.rs  document_nft.rs  document_nft_queries.rs  document_queries.rs  institution.rs  institution_queries.rs  mint.rs  mod.rs  query.rs  search_queries.rs  transfer.rs  upload.rs  user_management.rs
backend/src/logging/: external.rs  lifecycle_logger.rs  memory_logger.rs  mod.rs
backend/src/storage/: memory.rs  mod.rs
backend/src/types/: args.rs  errors.rs  metadata.rs  mod.rs  models.rs
backend/src/utils/: helpers.rs
docs/business/: BUSINESS_MODEL.md  BUSINESS_MODEL_EXECUTIVE_SUMMARY.md
docs/technical/: BUILD.md  ChainNotary Architecture Doc.docx  ChainNotary Challenges Assessment.docx  MEMORY_WIPE_TRACKING.md  (+4 more)
frontend/: .eslintrc.json  cypress.config.ts  eslint.config.ts  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
(+87 files in other folders)
