[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
candid = "0.10.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
